classDiagram
    %% ========================================
    %% NIVEAU 16/20 - CÔTÉ AUTEUR ET UX/UI
    %% ========================================
    %% Ce niveau AJOUTE aux classes des niveaux précédents
    
    %% CLASSES DES NIVEAUX PRÉCÉDENTS
    class User {
        +String id
        +String pseudo
        +String email
        +String passwordHash
        +String role
        +String avatarUrl
        +String bio
        +Date createdAt
        +Boolean isBanned
    }
    
    class Story {
        +String id
        +String title
        +String description
        +String[] tags
        +String theme
        +String coverImageUrl
        +String status
        +String authorId
        +String startPageId
        +Date createdAt
        +Date updatedAt
        +Float averageRating
        +Int totalRatings
        +Int totalReads
        +Int totalCompletions
        +Int abandonRate
    }
    
    class Page {
        +String id
        +String storyId
        +String content
        +String imageUrl
        +Boolean isEnd
        +String endLabel
        +Int order
        +Date createdAt
    }
    
    class Choice {
        +String id
        +String pageId
        +String text
        +String targetPageId
        +Int order
    }
    
    class GameSession {
        +String id
        +String userId
        +String storyId
        +String endPageId
        +String[] pathTaken
        +String status
        +Date playedAt
    }
    
    class Rating {
        +String id
        +String userId
        +String storyId
        +Int rating
        +String comment
        +Date createdAt
    }
    
    class Report {
        +String id
        +String userId
        +String storyId
        +String reason
        +String status
        +Date createdAt
    }
    
    class UnlockedEnding {
        +String id
        +String userId
        +String storyId
        +String pageId
        +Date unlockedAt
    }
    
    %% NOUVELLES CLASSES NIVEAU 16
    
    class AuthorProfile {
        +String id
        +String userId
        +Int totalStories
        +Int totalReads
        +Float averageRating
        +Int totalFollowers
        +Date memberSince
        +getStatistics()
        +getStoryPerformance()
    }
    
    class StoryStatistics {
        +String id
        +String storyId
        +Int totalReads
        +Int totalCompletions
        +Int totalAbandoned
        +Float completionRate
        +Date lastUpdated
        +calculateAdvancedStats()
        +getPopularPaths()
        +getAbandonmentPoints()
    }
    
    class PreviewSession {
        +String id
        +String authorId
        +String storyId
        +String currentPageId
        +Date startedAt
        +Boolean isPreview
        +startPreview()
        +continuePreview()
        +endPreview()
    }
    
    class Image {
        +String id
        +String uploadedBy
        +String url
        +String filename
        +String mimeType
        +Int fileSize
        +Date uploadedAt
        +upload()
        +delete()
    }
    
    class Notification {
        +String id
        +String userId
        +String type
        +String message
        +String relatedId
        +Boolean isRead
        +Date createdAt
        +markAsRead()
        +delete()
    }
    
    %% RELATIONS
    User "1" --> "*" Story : crée
    Story "1" --> "*" Page : contient
    Story "1" --> "1" Page : startPage
    Page "1" --> "*" Choice : propose
    Choice "*" --> "1" Page : pointeVers
    GameSession "*" --> "1" User : jouéPar
    GameSession "*" --> "1" Story : concerne
    User "1" --> "*" Rating : note
    Story "1" --> "*" Rating : estNotée
    User "1" --> "*" Report : signale
    Story "1" --> "*" Report : estSignalée
    User "1" --> "*" UnlockedEnding : débloque
    User "1" --> "1" AuthorProfile : possède
    Story "1" --> "1" StoryStatistics : aDesStats
    User "1" --> "*" PreviewSession : teste
    PreviewSession "*" --> "1" Story : concerne
    User "1" --> "*" Image : uploade
    Story "0..1" --> "1" Image : coverImage
    Page "0..1" --> "1" Image : illustration
    User "1" --> "*" Notification : reçoit
    Rating "1" --> "0..1" Notification : génère
    Report "1" --> "0..1" Notification : génère